dsl: isolated fork/combine + untyped map-style steps
Two related DSL changes, plus the call-site migration.

Fork isolation (no implicit merge):
- fork(...) now returns a ForkStage requiring an explicit combine(name, Aggregator);
  there is no silent shallow merge. Each branch runs on its own isolated context copy,
  so a branch's writes are invisible to its siblings and never touch the shared context.
- Engine: branch step results merge into the token's private payload overlay (tagged
  __armIdx__), and the join stages each arm's accumulated result for the aggregator,
  keyed by arm name. Arm names ride on the combine node's itemsKey (a store-portable
  field; a TASK node's branches are edge-derived and don't persist). Aggregator.union()
  is the ready-made "fold all arms" combine for disjoint writes.

Untyped, Stream.map-style steps:
- Workflow.define(name) takes no codec; WorkflowStream/Blueprint/Branch/Case/ForkStage
  are untyped. A step is Step<I,O> (input type may differ from output): step(name,
  Class<I> in, fn) rebuilds the input from the persisted JSON via that class and encodes
  the output reflectively. gate/effect/doWhile/Case.when take a Class too. JSON (Map)
  contexts have class-free convenience overloads.
- Worker typed binding (handle/handleGate/handleEffect) takes Class<I>; client.start
  encodes the input reflectively.
- Removed ContextCodec, VersionedContextCodec, ContextVersion: single-schema versioning
  is incompatible with per-step-changing types.

Migrated every call site (examples, cookbook, cli YAML, Scenarios, all tests); added
ForkCombineTest, ForkIsolationTest, ContextNullDeleteTest. Full suite green; the
OrderFulfilment example runs end-to-end.

Also carries the in-progress engine poll (server-side long-poll loop) and advanceRun->
advance changes already present in the working tree, which interlock with the above.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TaXmp5hT2eRgEgQ